crates/nirvash-macros/tests/fixtures/derive_protocol_input_witness_invalid.rs
use nirvash_macros::ProtocolInputWitness;

#[derive(Clone, Debug, ProtocolInputWitness)]
enum BadInput {
    Start,
}

fn main() {}
